add_executable(atomicIntegral_test atomicIntegral_test.cc)
target_link_libraries(atomicIntegral_test gtest_main)
add_test(NAME atomicIntegral_test COMMAND atomicIntegral_test)

add_executable(atomicVector_test atomicVector_test.cc)
target_link_libraries(atomicVector_test gtest_main)
add_test(NAME atomicVector_test COMMAND atomicVector_test)